# ani-fr

./: .gitignore  Cargo.toml  README.md
scraper/: requirements.txt  scraper.py
src/: anime.rs  autoclicker.rs  data.rs  ext.rs  main.rs  mal.rs
