[package]
name = "ani-fr"
version = "1.6.0"
edition = "2021"
license-file = "LICENSE"
description = "Download and watch animes in VF and VOSTFR (aka french versions)"
repository = "https://github.com/merlinxlanzo/ani-fr"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
inquire = "0.9.3"
colored = "3.0.0"
spinners = "4.1"
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart"] }
directories = "6.0.0"
threadpool = "1.8"
chrono = "0.4"
indicatif = "0.18.4"
anyhow = "1.0.101"
rand = "0.10.0"
device_query = "4.0.1"
mouse-rs = "0.4.2"
open = "5"
